<resources>
    <string name="app_name">FPlus</string>
    <string name="title_main">FPlus</string>
    <string name="subtitle_main">YOLO人物检测</string>
    <string name="gpu_option_title">推理后端</string>
    <string name="backend_npu">NPU 推理</string>
    <string name="backend_gpu">GPU 推理</string>
    <string name="backend_cpu">CPU 推理</string>
    <string name="model_option_title">模型</string>
    <string name="model_320_opt">Input 320 NHWC OPT</string>
    <string name="model_delta">DeltaForce 640</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="btn_benchmark">自动测速</string>
    <string name="benchmark_placeholder">尚未测速</string>
    <string name="btn_advanced">高级选项</string>
    <string name="advanced_title">高级选项</string>
    <string name="btn_reset">一键还原</string>
    <string name="btn_save">保存</string>
    <string name="models_option_title">模型管理</string>
    <string name="update_option_title">检查更新</string>
    <string name="benchmark_option_title">测速</string>
    <string name="model_status_downloaded">已下载</string>
    <string name="model_status_not_downloaded">未下载</string>
    <string name="model_status_downloading">下载中…</string>
    <string name="model_action_download">下载</string>
    <string name="model_action_delete">删除</string>
    <string name="main_config_format">模型：%1$s\n推理后端：%2$s</string>
    <string name="model_empty">暂无模型</string>
</resources>
